Import of PBOWEN/Business-OnlinePayment-CyberSource-0.07 from CPAN.
gitpan-cpan-distribution: Business-OnlinePayment-CyberSource
gitpan-cpan-version:      0.07
gitpan-cpan-path:         PBOWEN/Business-OnlinePayment-CyberSource-0.07.tar.gz
gitpan-cpan-author:       PBOWEN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -20,5 +20,8 @@ Revision history for Perl extension Business::OnlinePayment::CyberSource..
 0.05  Mon Oct 2 2005
         - Set the defaults for the business logic settings using the cybs.ini
 
-0.05  Wed Oct 12 2005
+0.06  Wed Oct 12 2005
         - Allow both line items and grand total.  If you use both, the grand total will prevail.
+
+0.07  Mon Dec 12 2005
+        - Improved the Documentation
