Import of XENO/Business-OnlinePayment-CyberSource-3.000004 from CPAN.
gitpan-cpan-distribution: Business-OnlinePayment-CyberSource
gitpan-cpan-version:      3.000004
gitpan-cpan-path:         XENO/Business-OnlinePayment-CyberSource-3.000004.tar.gz
gitpan-cpan-author:       XENO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Business-OnlinePayment-CyberSource
 
+3.000004  2012-08-30
+	- fix dependencies
+
 3.000003  2012-08-28
 	- fix licensing
 	- release to cpan
