--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Business-OnlinePayment-CyberSource
 
+3.000006  2012-10-04
+	- Add conditionals to only set avs_code and authorization if the appropriate roles are applied to the response object
+	- Fix some logic errors in client object
+	- Clean up some logic to remove unnecessary variables
+
 3.000005  2012-09-04
 	- Specify minimum version of Business::CyberSource as 0.006000
 	- Set response values for success and failure
