--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Business-OnlinePayment-CyberSource
 
+3.000009  2012-10-15
+	- Remove unneeded git remote
+
 3.000008  2012-10-15
 	- Updated logic in Client class to rethrow exceptions thrown by the CyberSource response object
 
