Import of HGDEV/Business-OnlinePayment-CyberSource-3.000010-TRIAL from CPAN.
gitpan-cpan-distribution: Business-OnlinePayment-CyberSource
gitpan-cpan-version:      3.000010-TRIAL
gitpan-cpan-path:         HGDEV/Business-OnlinePayment-CyberSource-3.000010-TRIAL.tar.gz
gitpan-cpan-author:       HGDEV
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Business-OnlinePayment-CyberSource
 
+3.000010  2012-10-29
+	- Removed checking of accept role
+	- removed debugging output
+
 3.000009  2012-10-15
 	- Remove unneeded git remote
 
