Import of XENO/Business-OnlinePayment-CyberSource-3.000008 from CPAN.
gitpan-cpan-distribution: Business-OnlinePayment-CyberSource
gitpan-cpan-version:      3.000008
gitpan-cpan-path:         XENO/Business-OnlinePayment-CyberSource-3.000008.tar.gz
gitpan-cpan-author:       XENO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Business::OnlinePayment
 
 VERSION
-    version 3.000011
+    version 3.000008
 
 SYNOPSIS
             use Business::OnlinePayment;
@@ -141,7 +141,8 @@ SEE ALSO
 
 BUGS
     Please report any bugs or feature requests on the bugtracker website
-    https://github.com/hostgator/Business-OnlinePayment-CyberSource/issues
+    https://github.com/xenoterracide/business-onlinepayment-cybersource/issu
+    es
 
     When submitting a bug or request, please include a test-file or a patch
     to an existing test-file that illustrates the bug or desired feature.
@@ -154,8 +155,7 @@ AUTHORS
     *   Peter Bowen <peter@bowenfamily.org>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2012 by HostGator.com
-    <http://www.hostgator.com>.
+    This software is copyright (c) 2014 by Hostgator.com.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
