--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Business::OnlinePayment
 
 VERSION
-    version 3.000008
+    version 3.000012
 
 SYNOPSIS
             use Business::OnlinePayment;
@@ -155,7 +155,8 @@ AUTHORS
     *   Peter Bowen <peter@bowenfamily.org>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2014 by Hostgator.com.
+    This software is copyright (c) 2014 by HostGator.com
+    <http://www.hostgator.com>.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
