--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 Revision history for Business-OnlinePayment-CyberSource
 
-3.000012  2014-03-03
+3.000013  2014-03-04
+	- remove use of deprecated run_transaction API
 
+3.000012  2014-03-03
 	- convert to Module::Runtime
 	- use Business::CyberSource 9 API
 	- remove Data::Dump
