--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Business-OnlinePayment-CyberSource
 
+3.000014  2014-03-04
+	- add conditional check to see if auth object exists
+
 3.000013  2014-03-04
 	- remove use of deprecated run_transaction API
 
