--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Business-OnlinePayment-CyberSource
 
+3.000016  2014-03-05
+	- finish converting to Module::Runtime
+	- require Crypt::SSLeay for tests
+
 3.000015  2014-03-04
+	- add Business::OnlinePayment 3 as a Prereq
 
 3.000014  2014-03-04
 	- add conditional check to see if auth object exists
